# companywork

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  repositories.py  schemas.py
backend/app/agents/: DebuggerAgent.py  DocumenterAgent.py  ResearcherAgent.py  TriagerAgent.py  base.py
backend/app/services/: github_repo_searcher.py  issue_loader.py  job_service.py  llm_client.py  orchestrator.py  report_builder.py
backend/tests/: conftest.py  test_health.py  test_reports_api.py
docs/superpowers/plans/: 2026-04-15-issue-multi-agent-implementation-plan.md
docs/superpowers/specs/: 2026-04-15-issue-multi-agent-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: SegmentedControl.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: AnalyzePage.tsx  ReportPage.tsx
